Cleaned up a bit of equality